fixed poster and logo button so visibilty is correct

--- a/src/scss/components/_dropdown.scss
+++ b/src/scss/components/_dropdown.scss
@@ -3,12 +3,19 @@ nav {
   justify-content: center;
   background-color: white;
   padding: 2rem;
+  z-index: 1;
+  width: 60vw;
+  height: 100vh;
+  position: absolute;
+  align-items: center;
+
 
   .dropdown-menu {
     
     display: flex;
     flex-direction: column;
     gap: 2.5rem;
+    text-align: center;
     li {
       list-style-type: none;
 
