--- a/src/scss/components/_header.scss
+++ b/src/scss/components/_header.scss
@@ -5,11 +5,11 @@ header {
 
 .logo-box {
     position: relative;
-    bottom: 120px;
-    right: 110px;
+    bottom: 170px;
+    right: 360px;
     cursor: pointer;
+    visibility: hidden;
+    
+    
 }
 
-nav{
-    position: absolute;
-}
