--- a/src/scss/pages/_visual.scss
+++ b/src/scss/pages/_visual.scss
@@ -1,7 +1,7 @@
 
 #timer-container {
   width: 200px;
-  height: 300px;
+  height: 400px;
   border: 1px solid #000;
   overflow: hidden;
   /* position: relative; */
